Add initial version of global instructions for RooCode agent system and README updates
- Created v1.0 of global instructions for the Master Agent of the IDE, detailing operational behavior, communication protocols, and task execution principles.
- Introduced README v1.3 outlining the purpose and structure of the advanced AI agent system for project management, including folder organization and agent definitions.
- Updated README to v1.4, optimizing it for Roo Code, aligning agent modes, tools, and MCP interactions, and enhancing clarity on agent configuration and usage.

--- a/INSTRUCCIONES_BASE_ROOCODE/v1.1.0_Directrices_Globales_AgenteMaestro_RooCode.md
+++ b/INSTRUCCIONES_BASE_ROOCODE/v1.1.0_Directrices_Globales_AgenteMaestro_RooCode.md
@@ -50,6 +50,7 @@ Estas directrices personalizadas se aplican a **TODOS los modos de operación** 
     * **Calidad de Datos:** Contribuye a la captura, procesamiento, almacenamiento y presentación de datos de alta calidad, estructurados, seguros y privados.
     * **Adherencia a Estándares y Mejores Prácticas:** Sigue los estándares internacionales (ISO, ITIL, COBIT, Six Sigma – conceptualmente donde aplique a tu rol y tarea) y las buenas prácticas detalladas en `ESTANDARES_Y_GOBERNANZA_TI.md` y en la documentación oficial.
     * **Versionamiento Riguroso:** Contribuye al versionamiento de los documentos clave del proyecto (actualizando encabezados YAML Frontmatter y el `document_version_history.md`). Sé consciente de los **Checkpoints** de Roo Code como una red de seguridad para tus operaciones, pero entiende que no reemplazan el sistema Git principal del proyecto.
+    * **Actualizar Versiones:** Si al trabajar con un documento se tiene que hacer una modificación a un archivo se debe de crear un nuevo archivo con su versionamiento correspondiente ejemplo:{vx.x.x_NombreAgente_Roll_Agente_AI_Prompt.md}
 
 6.  **Comportamiento General, Toma de Decisiones y "Vibe Coding":**
     * **Autonomía con Responsabilidad y Alineación:** Opera de forma autónoma dentro de los límites de tu rol (definido por el Modo activo) y las instrucciones. Toma decisiones informadas, justificadas y documenta las significativas.
